new proj/src/objects/GE_OG_Fin_Histry__c.object
<CustomObject>
    <fields>
        <fullName>GE_OG_ActualHst__c</fullName>
        <label>Recommended O&amp;G credit limit</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_FinHist_status__c</fullName>
        <label>Finance Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Started</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_Fin_CredLmt__c</fullName>
        <label>Finance Credit Limit</label>
        <picklist>
            <picklistValues>
                <fullName>$0 - $10000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$10001 - $500000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$500001 - $1000000000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$0 - $1000000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$0 - $1000000000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$0 - $5000000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$5000001 - $1000000000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_Fin_RiskScore__c</fullName>
        <label>Customer Risk Score</label>
        <picklist>
            <picklistValues>
                <fullName>Less than -1.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-1.5 to 1.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater than 1.5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_Fin_T_C_s__c</fullName>
        <label>Recommended Finance T&amp;C&apos;s</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_Finance_Details__c</fullName>
        <label>Finance Details</label>
        <referenceTo>GE_OG_Finance_Details__c</referenceTo>
        <relationshipLabel>Finance Histories</relationshipLabel>
        <relationshipName>Finance_Histories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GE_OG_Tier1_P_L__c</fullName>
        <label>Tier 1 P&amp;L</label>
        <picklist>
            <picklistValues>
                <fullName>Oil &amp; Gas (O&amp;G)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Finance History</label>
    <nameField>
        <label>Finance History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Finance Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>